# kami

./: .gitignore  Cargo.toml  README.md
examples/_template/: Cargo.toml  README.md  index.html  index.js  package-lock.json
examples/_template/src/: lib.rs
examples/simple_graph/: .gitignore  Cargo.toml  index.html  package-lock.json
examples/simple_graph/src/: lib.rs  setup.rs  shared.rs
examples/simple_polygons/: Cargo.toml  index.html
examples/simple_polygons/src/: lib.rs  shared.rs
src/: graph.rs  lib.rs  main.rs  math.rs  origami.rs
src/fold/: fold.rs
src/geometry/: line.rs  mod.rs  polygon.rs  utils.rs
src/graph/: graph.rs  planar_graph.rs
src/math/: bivector.rs  blade.rs  mod.rs  multivector.rs  rotor.rs  space.rs  trivector.rs  vector.rs
src/origami/: axioms.rs  crease.rs  foldability.rs  mod.rs  vertex.rs
web/: index.html  index.js  package-lock.json  package.json
