[package]
name = "simple_graph"
version = "0.1.0"
authors = ["Mike <mwalczyk2@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
kami = { path = "../../" }

[dependencies.web-sys]
web-sys = "0.3.41"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "SvgElement",
    "Text",
    "Window"
]