[package]
name = "_template"
version = "0.1.0"
authors = ["Mike <mwalczyk2@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.64"
kami = { path = "../../" }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
web-sys = "0.3.41"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "SvgElement",
    "Text",
    "Window"
]